# nav

./: .gitignore  CMakeLists.txt  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml  test-database-backend-image.yml  test-database-backend.yml  test-database-deploy.yml  test-database-frontend-image.yml  test-database-frontend.yml  test-database-worker-image.yml  test-database-worker.yml
data/: boards.json  toolchain.json
docs/: MODULE_ABI.md  cli-improvements.md  mvp.md  plan.md  vaios-as-library.md
include/nav/core/: board.hpp  cache.hpp  command.hpp  config.hpp  deps.hpp  execution_context.hpp  fetch.hpp  http_index.hpp  index.hpp  install.hpp  libdeps.hpp  lockfile.hpp  navconfig.hpp  navhal.hpp  platform.hpp  project_name.hpp  provision.hpp  registry.hpp  resolver.hpp  semver.hpp  serial.hpp  toolchain.hpp  ui.hpp
infra/: seed_fixtures.py
infra/postgres/: init.sql  seed_packages.sql  seed_test_data.sql
registry-api/: .dockerignore  Dockerfile  go.mod  go.sum
registry-api/cmd/server/: main.go
registry-api/internal/api/: routes.go
registry-api/internal/auth/: token.go
registry-api/internal/database/: db.go
registry-api/internal/index/: git.go
registry-api/internal/storage/: minio.go
registry-api/web/: app.js
registry-ui/: next.config.mjs
registry-ui/src/app/: globals.css  page.tsx
registry-ui/src/app/community/post/[id]/: page.tsx
scripts/: build_deb.sh  e2e_firmware_build.sh  install.sh  smoke_test.sh
scripts/windows/: AddToPath.ps1  ci-build.ps1
share/nav/boards/: arduino_uno.toml  esp32_devkitc.toml  nucleo_f401re.toml  nucleo_h743zi.toml  pico.toml
src/cli/: main.cpp
src/core/: board.cpp  cache.cpp  command.cpp  config.cpp  deps.cpp  execution_context.cpp  fetch.cpp  http_index.cpp  index.cpp  install.cpp  libdeps.cpp  lockfile.cpp  navconfig.cpp  navhal.cpp  platform.cpp  project_name.cpp  provision.cpp  registry.cpp  resolver.cpp  semver.cpp  serial.cpp  toolchain.cpp
src/core/commands/: board.cpp  build.cpp  check.cpp  clean.cpp  config.cpp  create.cpp  lib.cpp  monitor.cpp  registry.cpp  update.cpp  upload.cpp
templates/: cmakelists.txt.in  cmakelists_lib.txt.in  dot_config.in  embedded.hpp.in  embedded_config.hpp.in  lib_header.h.in  lib_source.c.in  main.c.in  nav.toml.in  nav_lib.toml.in
test_database/: .dockerignore  .env.example  .env.production.example  .gitignore  Caddyfile  README.md  docker-compose.production.yml  docker-compose.yml
test_database/backend/: Dockerfile  package-lock.json  package.json
test_database/backend/src/: server.js
test_database/database/: init.sql
test_database/deploy/kubernetes/: README.md  nav-registry.yaml
test_database/frontend/: Dockerfile  Dockerfile.production  index.html  package-lock.json  package.json  vite.config.js
test_database/frontend/src/: App.jsx  styles.css
test_database/nav/: .env.example  CMakeLists.txt  README.md  compose-gen.yml  nav.cmd  nav.mjs  nav.ps1
test_database/nav/.github/workflows/: release.yml
test_database/nav/docs/: auth.md  mvp.md
test_database/nav/include/nav/core/: toolchain.hpp
test_database/nav/infra/postgres/: init.sql
test_database/nav/registry-api/: Dockerfile  go.mod
test_database/nav/registry-api/cmd/server/: main.go
test_database/nav/registry-api/internal/api/: routes.go  tokens.go
test_database/nav/registry-api/internal/auth/: email.go  middleware.go  token_test.go
test_database/nav/registry-api/internal/storage/: minio.go
test_database/nav/registry-api/web/: index.html  style.css
test_database/nav/registry-ui/: Dockerfile  package.json
test_database/nav/registry-ui/src/app/: layout.tsx
test_database/nav/registry-ui/src/app/community/: page.tsx
test_database/nav/registry-ui/src/app/docs/: page.tsx
test_database/nav/samples/abi-v1/bme280/: navmod.toml
test_database/nav/samples/abi-v1/bme280/include/bme280/: bme280.h
test_database/nav/samples/abi-v1/bme280/src/: bme280.c
test_database/nav/samples/abi-v1/hold-app/: navmod.toml
test_database/nav/samples/abi-v1/hold-app/include/hold_app/: hold_app.h
test_database/nav/samples/abi-v1/hold-app/src/: main.c
test_database/nav/samples/blink-led/: README.md  nav.json
test_database/nav/samples/blink-led/src/: main.c
test_database/nav/scripts/: release.sh
test_database/nav/src/cli/: main.cpp
test_database/nav/src/core/: command.cpp
test_database/worker/: Dockerfile  package-lock.json  package.json
test_database/worker/src/: worker.js
tests/: CMakeLists.txt  mock_execution_context.hpp  test_board.cpp  test_cache.cpp  test_config.cpp  test_create.cpp  test_deps.cpp  test_execution_context.cpp  test_fetch.cpp  test_http_index.cpp  test_index.cpp  test_libdeps.cpp  test_lockfile.cpp  test_mock_execution_context.cpp  test_navconfig.cpp  test_platform.cpp  test_registry.cpp  test_resolver.cpp  test_semver.cpp  test_serial.cpp  test_toolchain.cpp  test_ui.cpp  test_update.cpp
